--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,4 +1,9 @@
 {
+    "Classrooms": "الصفوف",
+    "View": "عرض",
+    "Create": "انشاء",
+    "Delete": "حذف",
+    "Edit": "تعديل",
     "(and :count more error)": "(و :count خطأ إضافي)",
     "(and :count more errors)": "(و :count أخطاء إضافية)",
     "A new verification link has been sent to the email address you provided during registration.": "تم إرسال رابط تحقق جديد إلى عنوان البريد الإلكتروني الذي قمت بالتسجيل به.",
