--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,9 +1,6 @@
 {
     "Classrooms": "الصفوف",
-    "View": "عرض",
-    "Create": "انشاء",
-    "Delete": "حذف",
-    "Edit": "تعديل",
+    "Update" :"تعديل",
     "(and :count more error)": "(و :count خطأ إضافي)",
     "(and :count more errors)": "(و :count أخطاء إضافية)",
     "A new verification link has been sent to the email address you provided during registration.": "تم إرسال رابط تحقق جديد إلى عنوان البريد الإلكتروني الذي قمت بالتسجيل به.",
@@ -15,9 +12,12 @@
     "Click here to re-send the verification email.": "اضغط هنا لإعادة إرسال بريد التحقق.",
     "Confirm": "تأكيد",
     "Confirm Password": "تأكيد كلمة المرور",
+    "Create": "انشاء",
     "Current Password": "كلمة المرور الحالية",
     "Dashboard": "لوحة التحكم",
+    "Delete": "حذف",
     "Delete Account": "حذف الحساب",
+    "Edit": "تعديل",
     "Email": "البريد الإلكتروني",
     "Email Password Reset Link": "رابط إعادة تعيين كلمة مرور عبر البريد الإلكتروني",
     "Ensure your account is using a long, random password to stay secure.": "تأكد من أن حسابك يستخدم كلمة مرور طويلة وعشوائية للبقاء آمنًا.",
@@ -72,6 +72,7 @@
     "Update Password": "تحديث كلمة المرور",
     "Update your account's profile information and email address.": "قم بتحديث معلومات ملفك الشخصي وبريدك الإلكتروني.",
     "Verify Email Address": "التحقق من عنوان البريد الإلكتروني",
+    "View": "عرض",
     "Whoops!": "عذراً!",
     "You are receiving this email because we received a password reset request for your account.": "لقد استلمت هذا الإيميل لأننا استقبلنا طلباً لاستعادة كلمة مرور حسابك.",
     "You're logged in!": "لقد قمت بتسجيل الدخول!",
